--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "gulp": "^3.6.2",
+    "mocha": "^1.18.2",
     "proclaim": "^2.0.0",
     "springbokjs-library": "^1.0.3"
   }
