--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -5,8 +5,8 @@
     "springbokjs",
     "logger"
   ],
-  "version": "2.0.0",
-  "homepage": "http://springbokjs.org",
+  "version": "2.0.1",
+  "homepage": "https://github.com/christophehurpeau/springbokjs-logger",
   "license": "MIT",
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "repository": "git://github.com/christophehurpeau/springbokjs-logger.git",
@@ -15,12 +15,12 @@
     "test": "node_modules/.bin/mocha -u tdd tests/lib"
   },
   "dependencies": {
-    "ansi-styles": "^1.1.0"
+    "ansi-styles": "^2.0.0"
   },
   "devDependencies": {
     "gulp": "^3.8",
-    "mocha": "^1.21.5",
+    "mocha": "^2.1.0",
     "proclaim": "^2.0.0",
-    "springbokjs-library": "^3.0.0"
+    "springbokjs-library": "^3.4.1"
   }
 }
