--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -31,7 +31,9 @@
     "ansi-styles": "^2.1.0"
   },
   "devDependencies": {
-    "coveralls": "^2.11.6",
+    "coveralls": "^2.11.8",
+    "eslint": "^1.10.3",
+    "eslint-config-partridge": "^3.0.1",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
     "karma-firefox-launcher": "^0.1.7",
@@ -42,7 +44,7 @@
     "mocha": "^2.4.5",
     "phantomjs": "^1.9.19",
     "proclaim": "^3.4.0",
-    "springbokjs-library": "^14.0.1",
+    "springbokjs-library": "^15.0.0",
     "xunit-file": "0.0.9"
   }
 }
