fix browser main field in package.json

--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -10,7 +10,7 @@
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "repository": "christophehurpeau/nightingale",
   "main": "./lib/node.js",
-  "browser": "./lib/browser.js",
+  "browser": "./browser/lib/browser.js",
   "jspm": {
     "main": "browser/lib/browser.js",
     "directories": {
