--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -27,6 +27,7 @@
     "babel-cli": "^6.7.7",
     "eslint": "^2.8.0",
     "eslint-config-pob": "^5.0.0",
-    "springbokjs-library": "^17.0.0"
+    "springbokjs-library": "^17.0.0",
+    "xunit-file": "0.0.9"
   }
 }
