--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -26,9 +26,12 @@
     "nightingale-logger": "^1.1.1"
   },
   "devDependencies": {
+    "babel-eslint": "^6.0.4",
     "coveralls": "^2.11.9",
-    "eslint": "^2.9.0",
+    "eslint": "^2.11.1",
+    "eslint-config-airbnb-base": "^3.0.1",
     "eslint-config-pob": "^6.1.0",
+    "eslint-plugin-import": "^1.8.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-firefox-launcher": "^0.1.7",
