--- a/packages/nightingale-ansi-formatter/package.json
+++ b/packages/nightingale-ansi-formatter/package.json
@@ -1,34 +1,52 @@
 {
   "name": "nightingale-ansi-formatter",
+  "version": "1.1.0",
   "description": "Nightingale ANSI formatter",
   "keywords": [
     "nightingale",
     "nightingale-formatter"
   ],
-  "version": "1.1.0",
-  "homepage": "https://github.com/nightingalejs/nightingale",
-  "license": "ISC",
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
+  "license": "ISC",
   "repository": "nightingalejs/nightingale-ansi-formatter",
+  "homepage": "https://github.com/nightingalejs/nightingale",
   "main": "./lib/index.js",
-  "browser": "./browser/lib/index.js",
   "scripts": {
-    "test": "make test",
-    "build": "make build",
-    "postpublish": "make post-publish",
-    "preversion": "make pre-version",
-    "version": "make version",
-    "watch": "make watch",
-    "lint": "make lint"
+    "build": "pob-build",
+    "build:dev": "pob-build",
+    "clean": "rm -Rf docs dist test/node6 coverage",
+    "generate:test-coverage": "rm -Rf coverage/ ; pob-build doc ; node --harmony --es_staging node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --recursive --reporter=spec -u tdd test/node6",
+    "lint": "eslint --ext .js,.jsx --fix -c .eslintrc.yml src/ test/src/",
+    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit || echo",
+    "preversion": "npm run lint && npm run build && npm run build && pob-repository-check-clean",
+    "release": "pob-repository-check-clean && pob-release",
+    "test": "mocha --harmony --es_staging --recursive --bail -u tdd test/node6",
+    "version": "pob-version",
+    "watch": "pob-watch",
+    "watch:dev": "pob-watch"
   },
   "dependencies": {
     "ansi-styles": "chalk/ansi-styles#47ccb63c5b9b296b39188717b0efc4123a036d47",
-    "nightingale-formatter": "^1.1.0"
+    "nightingale-formatter": "^1.2.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.7",
-    "eslint": "^2.8.0",
-    "eslint-config-pob": "^5.0.0",
-    "springbokjs-library": "^17.0.0"
+    "babel-cli": "^6.10.1",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-defines": "^3.0.0",
+    "babel-plugin-discard-module-references": "^1.0.0",
+    "babel-plugin-remove-dead-code": "^1.1.0",
+    "babel-plugin-typecheck": "^3.9.0",
+    "babel-preset-es2015-node6": "^0.2.0",
+    "babel-preset-flow": "^1.0.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "eslint": "^3.1.0",
+    "eslint-config-airbnb-base": "^4.0.2",
+    "eslint-config-pob": "^6.1.2",
+    "eslint-plugin-import": "^1.10.3",
+    "istanbul": "^0.4.4",
+    "mocha": "^2.5.3",
+    "pob-babel": "^2.0.0",
+    "pob-release": "^2.0.5",
+    "xunit-file": "^1.0.0"
   }
 }
