--- a/packages/nightingale-logger/.doclets.yml
+++ b/packages/nightingale-logger/.doclets.yml
@@ -1,5 +1,5 @@
 files:
-  - lib/index.js
+  - lib-es5/index.js
 packageJson: package.json
 articles:
-  - Overview: README.md 
+  - Overview: README.md
