--- a/packages/nightingale-logger/circle.yml
+++ b/packages/nightingale-logger/circle.yml
@@ -1,6 +1,6 @@
 machine:
   node:
-    version: 5.7.0
+    version: 6.3.0
 
 general:
   branches:
@@ -17,25 +17,30 @@ test:
   pre:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
   override:
-    - make lint
-    - make build
-    - XUNIT_FILE=$CIRCLE_TEST_REPORTS/junit/xunit.xml node_modules/.bin/mocha --harmony --recursive --reporter xunit-file -u tdd test/lib
-    - make docs
+    - npm run lint
+    - npm run build
+    - XUNIT_FILE=$CIRCLE_TEST_REPORTS/junit/xunit.xml node_modules/.bin/mocha --harmony --recursive --reporter xunit-file -u tdd test/node6
+    - npm run docs
   post:
-    # - export COVERALLS_SERVICE_JOB_ID=$CIRCLE_BUILD_NUM && export COVERALLS_SERVICE_NAME=circleci && export COVERALLS_REPO_TOKEN= && export COVERALLS_GIT_COMMIT=$CIRCLE_SHA1 && export COVERALLS_GIT_BRANCH=$CIRCLE_BRANCH && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+    # - export COVERALLS_SERVICE_JOB_ID=$CIRCLE_BUILD_NUM && export COVERALLS_SERVICE_NAME=circleci && export COVERALLS_GIT_COMMIT=$CIRCLE_SHA1 && export COVERALLS_GIT_BRANCH=$CIRCLE_BRANCH && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
     - cp -R coverage $CIRCLE_ARTIFACTS/
     - cp -R docs $CIRCLE_ARTIFACTS/
+
 
 deployment:
   docs:
     branch: master
     commands:
-      - git config user.email "builds@circleci.com" ; git config user.name "CircleCi"
-      - mv coverage coverage-tmp ; mv docs docs-tmp
+      - git config user.email "builds@circleci.com"
+      - git config user.name "CircleCi"
+      - mv coverage coverage-tmp
+      - mv docs docs-tmp
+      - git fetch
       - git checkout -f gh-pages
       - rm -Rf docs coverage
-      - mv docs-tmp docs ; mv coverage-tmp coverage
+      - mv docs-tmp docs
+      - mv coverage-tmp coverage
       - date > date.txt
       - git add -f docs coverage
       - git commit -m"auto commit from circleci"
-      - git push origin gh-pages
+      - git push -f origin gh-pages
