--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -1,24 +1,36 @@
 {
   "name": "nightingale",
+  "version": "4.4.0",
   "description": "Logger for browser and node",
   "keywords": [
     "logger"
   ],
-  "version": "4.4.0",
-  "homepage": "https://github.com/nightingalejs/nightingale",
-  "license": "ISC",
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
+  "license": "ISC",
   "repository": "nightingalejs/nightingale",
-  "main": "./lib/index.js",
-  "browser": "./browser/lib/index.js",
+  "homepage": "https://github.com/nightingalejs/nightingale",
+  "main": "index.js",
+  "browser": "./lib-browsers/index.js",
+  "browser-dev": "./lib-browsers-dev/index.js",
+  "webpack:main": "./lib-webpack/index.js",
+  "webpack:main-dev": "./lib-webpack-dev/index.js",
+  "webpack:main-modern-browsers": "./lib-webpack-modern-browsers/index.js",
+  "webpack:main-modern-browsers-dev": "./lib-webpack-modern-browsers-dev/index.js",
   "scripts": {
-    "test": "make test",
-    "build": "make build",
-    "postpublish": "make post-publish",
-    "preversion": "make pre-version",
-    "version": "make version",
-    "watch": "make watch",
-    "lint": "make lint"
+    "build": "pob-build",
+    "build:dev": "pob-build",
+    "clean": "rm -Rf docs dist test/node6 coverage",
+    "generate:api": "rm -Rf docs/ ; mkdir docs/ ; pob-build doc ; jsdoc README.md lib-doc --recurse --destination docs/ --configure jsdoc.conf.json ; rm -Rf lib-doc",
+    "generate:docs": "npm run generate:api && npm run generate:test-coverage",
+    "generate:test-coverage": "rm -Rf coverage/ ; node --harmony --es_staging node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --recursive --reporter=spec -u tdd test/node6",
+    "lint": "eslint --ext .js,.jsx --fix -c .eslintrc.yml src/ test/src/",
+    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit || echo",
+    "preversion": "npm run lint && npm run build && pob-repository-check-clean",
+    "release": "pob-repository-check-clean && pob-release",
+    "test": "mocha --harmony --es_staging --recursive --bail -u tdd test/node6",
+    "version": "pob-version",
+    "watch": "pob-watch",
+    "watch:dev": "pob-watch"
   },
   "dependencies": {
     "minimatch": "^3.0.2",
@@ -27,24 +39,41 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
-    "coveralls": "^2.11.11",
-    "eslint": "^3.1.1",
-    "eslint-config-airbnb-base": "^4.0.2",
+    "babel-plugin-add-jsdoc-annotations": "^5.0.0",
+    "babel-plugin-defines": "^3.1.0",
+    "babel-plugin-discard-module-references": "^1.0.0",
+    "babel-plugin-remove-dead-code": "^1.1.0",
+    "babel-plugin-typecheck": "^3.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-node6": "^0.2.0",
+    "babel-preset-es2015-webpack": "^6.4.2",
+    "babel-preset-flow": "^1.0.0",
+    "babel-preset-jsdoc": "^0.1.1",
+    "babel-preset-modern-browsers": "^5.1.0",
+    "babel-preset-modern-browsers-stage-1": "^1.0.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "coveralls": "^2.11.12",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb-base": "^5.0.1",
     "eslint-config-pob": "^6.1.4",
-    "eslint-plugin-import": "^1.11.1",
-    "karma": "^1.1.1",
+    "eslint-plugin-import": "^1.12.0",
+    "istanbul": "^0.4.4",
+    "jaguarjs-jsdoc": "github:christophehurpeau/jaguarjs-jsdoc#0e577602ac327a694d4f619cb37c1476c523261e",
+    "jsdoc": "^3.4.0",
+    "karma": "^1.1.2",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ievms": "^0.1.0",
     "karma-mocha": "^1.1.1",
     "karma-proclaim": "^1.0.0",
-    "mocha": "^2.5.3",
+    "mocha": "^3.0.0",
     "nightingale-console": "^1.1.0",
     "nightingale-console-output": "^1.0.1",
     "nightingale-handler": "^1.0.2",
     "nightingale-json-formatter": "^1.1.0",
     "nightingale-string": "^1.0.1",
-    "springbokjs-library": "^17.0.0",
-    "xunit-file": "1.0.0"
+    "pob-babel": "^5.0.0",
+    "pob-release": "^2.0.5",
+    "xunit-file": "^1.0.0"
   }
 }
