--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -33,46 +33,42 @@
     "watch:dev": "pob-watch"
   },
   "dependencies": {
-    "minimatch": "^3.0.2",
+    "minimatch": "^3.0.3",
     "nightingale-levels": "^1.0.0",
     "nightingale-logger": "^1.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
     "babel-plugin-add-jsdoc-annotations": "^5.0.0",
-    "babel-plugin-defines": "^3.1.0",
-    "babel-plugin-discard-module-references": "^1.0.0",
-    "babel-plugin-remove-dead-code": "^1.1.0",
-    "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-node6": "^0.2.0",
-    "babel-preset-es2015-webpack": "^6.4.2",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015-node6": "^0.3.0",
     "babel-preset-flow": "^1.0.0",
     "babel-preset-jsdoc": "^0.1.1",
     "babel-preset-modern-browsers": "^5.1.0",
     "babel-preset-modern-browsers-stage-1": "^1.0.0",
-    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
     "coveralls": "^2.11.12",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb-base": "^5.0.1",
-    "eslint-config-pob": "^6.1.4",
-    "eslint-plugin-import": "^1.12.0",
+    "eslint": "^3.3.0",
+    "eslint-config-airbnb-base": "^5.0.2",
+    "eslint-config-pob": "^6.1.5",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^1.13.0",
     "istanbul": "^0.4.4",
     "jaguarjs-jsdoc": "github:christophehurpeau/jaguarjs-jsdoc#0e577602ac327a694d4f619cb37c1476c523261e",
     "jsdoc": "^3.4.0",
-    "karma": "^1.1.2",
+    "karma": "^1.2.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ievms": "^0.1.0",
     "karma-mocha": "^1.1.1",
     "karma-proclaim": "^1.0.0",
-    "mocha": "^3.0.0",
+    "mocha": "^3.0.2",
     "nightingale-console": "^1.1.0",
     "nightingale-console-output": "^1.0.1",
     "nightingale-handler": "^1.0.2",
     "nightingale-json-formatter": "^1.1.0",
     "nightingale-string": "^1.0.1",
-    "pob-babel": "^5.0.0",
+    "pob-babel": "^7.0.2",
     "pob-release": "^2.0.5",
     "xunit-file": "^1.0.0"
   }
