--- a/packages/nightingale/circle.yml
+++ b/packages/nightingale/circle.yml
@@ -1,6 +1,6 @@
 machine:
   node:
-    version: 6.3.0
+    version: 6.6.0
 
 general:
   branches:
@@ -17,15 +17,18 @@ test:
   pre:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
   override:
-    - npm run lint
-    - npm run build
+    - npm run preversion
+    - npm run test
     - XUNIT_FILE=$CIRCLE_TEST_REPORTS/junit/xunit.xml node_modules/.bin/mocha --harmony --recursive --reporter xunit-file -u tdd test/node6
-    - npm run generate:docs  
+
+    - npm run generate:docs
   post:
-    - export COVERALLS_SERVICE_JOB_ID=$CIRCLE_BUILD_NUM && export COVERALLS_SERVICE_NAME=circleci && export COVERALLS_GIT_COMMIT=$CIRCLE_SHA1 && export COVERALLS_GIT_BRANCH=$CIRCLE_BRANCH && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+
+    - bash <(curl -s https://codecov.io/bash)
     - cp -R coverage $CIRCLE_ARTIFACTS/
+
     - cp -R docs $CIRCLE_ARTIFACTS/
-  
+
 
 deployment:
   docs:
