--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -7,7 +7,7 @@
   ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
-  "repository": "nightingalejs/nightingale",
+  "repository": "git@github.com:nightingalejs/nightingale.git",
   "homepage": "https://github.com/nightingalejs/nightingale",
   "main": "index.js",
   "browser": "./lib-browsers/index.js",
@@ -18,46 +18,43 @@
   "webpack:main-modern-browsers-dev": "./lib-webpack-modern-browsers-dev/index.js",
   "scripts": {
     "build": "pob-build",
-    "build:dev": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
     "generate:api": "rm -Rf docs/ ; mkdir docs/ ; pob-build doc ; jsdoc README.md lib-doc --recurse --destination docs/ --configure jsdoc.conf.json ; rm -Rf lib-doc",
     "generate:docs": "npm run generate:api && npm run generate:test-coverage",
-    "generate:test-coverage": "rm -Rf coverage/ ; node --harmony --es_staging node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --recursive --reporter=spec -u tdd test/node6",
-    "lint": "eslint --ext .js,.jsx --fix -c .eslintrc.yml src/ test/src/",
-    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit || echo",
+    "generate:test-coverage": "rm -Rf coverage/ ; NODE_ENV=production node --harmony --es_staging node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --recursive --reporter=spec -u tdd test/node6",
+    "lint": "eslint --ext .js,.jsx --fix src/ test/src/",
+    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true",
     "preversion": "npm run lint && npm run build && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
     "test": "mocha --harmony --es_staging --recursive --bail -u tdd test/node6",
     "version": "pob-version",
-    "watch": "pob-watch",
-    "watch:dev": "pob-watch"
+    "watch": "pob-watch"
   },
   "dependencies": {
     "minimatch": "^3.0.3",
     "nightingale-levels": "^1.0.0",
-    "nightingale-logger": "^1.2.0"
+    "nightingale-logger": "^1.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
     "babel-plugin-add-jsdoc-annotations": "^5.0.0",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2015-node6": "^0.3.0",
     "babel-preset-flow": "^1.0.0",
     "babel-preset-jsdoc": "^0.1.1",
     "babel-preset-modern-browsers": "^5.1.0",
     "babel-preset-modern-browsers-stage-1": "^1.0.0",
     "babel-preset-stage-1": "^6.13.0",
-    "coveralls": "^2.11.12",
-    "eslint": "^3.3.0",
-    "eslint-config-airbnb-base": "^5.0.2",
-    "eslint-config-pob": "^6.1.5",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb-base": "^7.1.0",
+    "eslint-config-pob": "^7.3.2",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.13.0",
-    "istanbul": "^0.4.4",
+    "eslint-plugin-import": "^1.15.0",
+    "istanbul": "^0.4.5",
     "jaguarjs-jsdoc": "github:christophehurpeau/jaguarjs-jsdoc#0e577602ac327a694d4f619cb37c1476c523261e",
-    "jsdoc": "^3.4.0",
-    "karma": "^1.2.0",
-    "karma-chrome-launcher": "^1.0.1",
+    "jsdoc": "^3.4.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ievms": "^0.1.0",
     "karma-mocha": "^1.1.1",
@@ -68,8 +65,9 @@
     "nightingale-handler": "^1.0.2",
     "nightingale-json-formatter": "^1.1.0",
     "nightingale-string": "^1.0.1",
-    "pob-babel": "^7.0.2",
-    "pob-release": "^2.0.5",
+    "pob-babel": "^8.0.3",
+    "pob-release": "^2.1.2",
+    "tcomb-forked": "^3.2.13",
     "xunit-file": "^1.0.0"
   }
 }
