--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -33,27 +33,24 @@
     "nightingale-levels": "^1.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.0.0",
     "babel-plugin-add-jsdoc-annotations": "^5.0.0",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-node6": "^0.3.0",
-    "babel-preset-flow": "^1.0.0",
     "babel-preset-jsdoc": "^0.1.1",
     "babel-preset-modern-browsers": "^5.1.0",
-    "babel-preset-modern-browsers-stage-1": "^1.0.0",
-    "babel-preset-stage-1": "^6.13.0",
-    "eslint": "^3.5.0",
-    "eslint-config-airbnb-base": "^7.1.0",
-    "eslint-config-pob": "^7.3.2",
+    "eslint": "^3.6.1",
+    "eslint-config-airbnb-base": "^8.0.0",
+    "eslint-config-pob": "^7.6.0",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-import": "^2.0.0",
     "istanbul": "^0.4.5",
-    "jaguarjs-jsdoc": "github:christophehurpeau/jaguarjs-jsdoc#0e577602ac327a694d4f619cb37c1476c523261e",
     "jsdoc": "^3.4.1",
-    "mocha": "^3.0.2",
-    "pob-babel": "^8.0.3",
+    "minami": "^1.1.1",
+    "mocha": "^3.1.0",
+    "pob-babel": "^8.3.2",
     "pob-release": "^2.1.2",
-    "tcomb-forked": "^3.2.13",
+    "tcomb-forked": "^3.4.0",
     "xunit-file": "^1.0.0"
   }
 }
