--- a/packages/nightingale-ansi-formatter/package.json
+++ b/packages/nightingale-ansi-formatter/package.json
@@ -8,45 +8,41 @@
   ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
-  "repository": "nightingalejs/nightingale-ansi-formatter",
+  "repository": "git@github.com:nightingalejs/nightingale-ansi-formatter.git",
   "homepage": "https://github.com/nightingalejs/nightingale",
   "main": "./index.js",
   "scripts": {
     "build": "pob-build",
-    "build:dev": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
-    "generate:test-coverage": "rm -Rf coverage/ ; pob-build doc ; node --harmony --es_staging node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --recursive --reporter=spec -u tdd test/node6",
-    "lint": "eslint --ext .js,.jsx --fix -c .eslintrc.yml src/ test/src/",
-    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit || echo",
-    "preversion": "npm run lint && npm run build && npm run build && pob-repository-check-clean",
+    "generate:test-coverage": "rm -Rf coverage/ ; NODE_ENV=production node --harmony --es_staging node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --recursive --reporter=spec -u tdd test/node6",
+    "lint": "eslint --ext .js,.jsx --fix src/ test/src/",
+    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
+    "preversion": "npm run lint && npm run build && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
     "test": "mocha --harmony --es_staging --recursive --bail -u tdd test/node6",
     "version": "pob-version",
-    "watch": "pob-watch",
-    "watch:dev": "pob-watch"
+    "watch": "pob-watch"
   },
   "dependencies": {
     "ansi-styles": "chalk/ansi-styles#47ccb63c5b9b296b39188717b0efc4123a036d47",
-    "nightingale-formatter": "^1.2.2"
+    "nightingale-formatter": "^1.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-defines": "^3.0.0",
-    "babel-plugin-discard-module-references": "^1.0.0",
-    "babel-plugin-remove-dead-code": "^1.1.0",
-    "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-es2015-node6": "^0.2.0",
-    "babel-preset-flow": "^1.0.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "eslint": "^3.1.0",
-    "eslint-config-airbnb-base": "^4.0.2",
-    "eslint-config-pob": "^6.1.2",
-    "eslint-plugin-import": "^1.10.3",
-    "istanbul": "^0.4.4",
-    "mocha": "^2.5.3",
-    "pob-babel": "^2.0.0",
-    "pob-release": "^2.0.5",
+    "babel-cli": "^6.16.0",
+    "babel-eslint": "^7.0.0",
+    "babel-preset-es2015-node6": "^0.3.0",
+    "eslint": "^3.8.0",
+    "eslint-config-airbnb-base": "^8.0.0",
+    "eslint-config-pob": "^7.6.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^1.16.0",
+    "istanbul": "^0.4.5",
+    "komet": "^0.1.3",
+    "komet-karma": "^0.2.0",
+    "mocha": "^3.1.2",
+    "pob-babel": "^9.0.0",
+    "pob-release": "^2.2.1",
+    "tcomb-forked": "^3.4.0",
     "xunit-file": "^1.0.0"
   }
 }
