--- a/packages/nightingale-console-output/package.json
+++ b/packages/nightingale-console-output/package.json
@@ -10,7 +10,13 @@
   "license": "ISC",
   "repository": "git@github.com:nightingalejs/nightingale-console-output.git",
   "homepage": "https://github.com/nightingalejs/nightingale",
-  "main": "./lib/node.js",
+  "main": "./index.js",
+  "browser": "./lib-browsers/index.js",
+  "browser-dev": "./lib-browsers-dev/index.js",
+  "webpack:main": "./lib-webpack/index.js",
+  "webpack:main-dev": "./lib-webpack-dev/index.js",
+  "webpack:main-modern-browsers": "./lib-webpack-modern-browsers/index.js",
+  "webpack:main-modern-browsers-dev": "./lib-webpack-modern-browsers-dev/index.js",
   "scripts": {
     "build": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
@@ -26,7 +32,9 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.0.0",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-node6": "^0.3.0",
+    "babel-preset-modern-browsers": "^6.0.0",
     "eslint": "^3.6.1",
     "eslint-config-airbnb-base": "^8.0.0",
     "eslint-config-pob": "^7.6.0",
