nighingale v2 compatibility for nightingale-logger v1

--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -30,6 +30,7 @@
     "watch": "pob-watch"
   },
   "dependencies": {
+    "nightingale-debug": "^1.0.2",
     "nightingale-levels": "^1.0.0"
   },
   "devDependencies": {
