--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -31,9 +31,9 @@
     "watch": "pob-watch"
   },
   "dependencies": {
-    "minimatch": "^3.0.3",
+    "nightingale-debug": "^1.0.2",
     "nightingale-levels": "^1.0.0",
-    "nightingale-logger": "^1.5.0"
+    "nightingale-logger": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.0.0",
@@ -57,13 +57,12 @@
     "karma-proclaim": "^1.0.0",
     "minami": "^1.1.1",
     "mocha": "^3.1.2",
-    "nightingale-console": "^1.1.0",
-    "nightingale-console-output": "^1.0.1",
-    "nightingale-handler": "^1.0.2",
-    "nightingale-json-formatter": "^1.1.0",
-    "nightingale-string": "^1.0.1",
+    "nightingale-console": "^2.0.0",
+    "nightingale-console-output": "^1.2.0",
+    "nightingale-json-formatter": "^1.2.0",
+    "nightingale-string": "^2.0.0",
     "pob-babel": "^9.0.0",
-    "pob-release": "^2.2.1",
+    "pob-release": "^2.2.2",
     "tcomb-forked": "^3.4.0",
     "xunit-file": "^1.0.0"
   }
