--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nightingale",
-  "version": "4.10.0",
+  "version": "5.0.0-beta.1",
   "description": "Logger for browser and node",
   "keywords": [
     "logger"
