--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -21,8 +21,9 @@
     "generate:api": "rm -Rf docs/ ; mkdir docs/ ; pob-build doc ; jsdoc README.md lib-doc --recurse --destination docs/ --configure jsdoc.conf.json ; rm -Rf lib-doc",
     "generate:docs": "npm run generate:api && npm run generate:test-coverage",
     "generate:test-coverage": "rm -Rf coverage/ ; NODE_ENV=production node --harmony --es_staging node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --recursive --reporter=spec -u tdd test/node6",
-    "lint": "eslint --ext .js,.jsx --fix src/ test/src/",
-    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true",
+    "lint": "eslint --ext .js,.jsx src/ test/src/",
+    "prepare": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
+    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
     "preversion": "npm run lint && npm run build && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
     "test": "mocha --harmony --es_staging --recursive --bail -u tdd test/node6",
@@ -47,9 +48,11 @@
     "eslint-plugin-import": "^1.16.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.4.2",
+    "komet": "^0.1.3",
+    "komet-karma": "^0.2.3",
     "minami": "^1.1.1",
     "mocha": "^3.1.2",
-    "pob-babel": "^9.0.0",
+    "pob-babel": "^12.5.0",
     "pob-release": "^2.2.2",
     "tcomb-forked": "^3.4.0",
     "xunit-file": "^1.0.0"
