--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nightingale-logger",
-  "version": "1.6.0",
+  "version": "3.0.0-beta.1",
   "description": "Logger for browser and node",
   "keywords": [
     "nightingale"
