--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -31,14 +31,13 @@
     "watch": "pob-watch"
   },
   "dependencies": {
-    "nightingale-debug": "^1.0.2",
     "nightingale-levels": "^1.0.0",
-    "nightingale-logger": "^1.6.0 || ^2.0.0"
+    "nightingale-logger": "^3.0.0-beta.1"
   },
   "devDependencies": {
-    "babel-eslint": "^7.0.0",
+    "babel-eslint": "^7.1.0",
     "babel-plugin-add-jsdoc-annotations": "^5.1.0",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2015-node6": "^0.3.0",
     "babel-preset-jsdoc": "^0.4.0",
     "babel-preset-modern-browsers": "^6.0.0",
@@ -57,11 +56,11 @@
     "karma-proclaim": "^1.0.0",
     "minami": "^1.1.1",
     "mocha": "^3.1.2",
-    "nightingale-console": "^2.0.0",
+    "nightingale-console": "^2.1.0",
     "nightingale-console-output": "^1.2.0",
     "nightingale-json-formatter": "^1.2.0",
     "nightingale-string": "^2.0.0",
-    "pob-babel": "^12.1.0",
+    "pob-babel": "^12.5.0",
     "pob-release": "^2.2.2",
     "tcomb-forked": "^3.4.0",
     "xunit-file": "^1.0.0"
