--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -40,18 +40,19 @@
     "babel-preset-es2015-node6": "^0.3.0",
     "babel-preset-jsdoc": "^0.4.0",
     "babel-preset-modern-browsers": "^6.0.0",
-    "eslint": "^3.8.1",
+    "eslint": "^3.9.1",
     "eslint-config-airbnb-base": "^9.0.0",
-    "eslint-config-pob": "^7.6.0",
+    "eslint-config-pob": "^9.0.1",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-flowtype": "^2.25.0",
+    "eslint-plugin-import": "^2.1.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.4.2",
     "komet": "^0.1.3",
     "komet-karma": "^0.2.3",
     "minami": "^1.1.1",
     "mocha": "^3.1.2",
-    "pob-babel": "^12.5.0",
+    "pob-babel": "^12.5.5",
     "pob-release": "^2.2.2",
     "tcomb-forked": "^3.4.0",
     "xunit-file": "^1.0.0"
