--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "nightingale-levels": "^1.0.0",
-    "nightingale-logger": "^3.0.0-beta.3"
+    "nightingale-logger": "^3.0.0-rc.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.0",
@@ -42,11 +42,11 @@
     "babel-preset-es2015-node6": "^0.3.0",
     "babel-preset-jsdoc": "^0.4.0",
     "babel-preset-modern-browsers": "^6.0.0",
-    "eslint": "^3.8.1",
+    "eslint": "^3.9.1",
     "eslint-config-airbnb-base": "^9.0.0",
-    "eslint-config-pob": "^7.6.0",
+    "eslint-config-pob": "^9.0.1",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-import": "^2.1.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.4.2",
     "karma": "^1.3.0",
@@ -63,7 +63,7 @@
     "nightingale-console-output": "^1.2.0",
     "nightingale-json-formatter": "^1.2.0",
     "nightingale-string": "^2.0.0",
-    "pob-babel": "^12.5.0",
+    "pob-babel": "^12.5.5",
     "pob-release": "^2.2.2",
     "tcomb-forked": "^3.4.0",
     "xunit-file": "^1.0.0"
