--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nightingale-logger",
-  "version": "3.0.0-rc.2",
+  "version": "3.0.0",
   "description": "Logger for browser and node",
   "keywords": [
     "nightingale"
