--- a/packages/nightingale-logger/circle.yml
+++ b/packages/nightingale-logger/circle.yml
@@ -1,6 +1,6 @@
 machine:
   node:
-    version: 7.6.0
+    version: 8.3.0
 
 general:
   branches:
@@ -12,7 +12,7 @@ dependencies:
     - ~/.cache/yarn
     - node_modules
   override:
-    - yarn
+    - yarn --prefer-offline --frozen-lockfile
 
 test:
   pre:
@@ -20,7 +20,6 @@ test:
   override:
     - yarn run preversion
     - yarn run test
-    - POBREGISTER_ONLY=./testXUNIT_FILE=$CIRCLE_TEST_REPORTS/junit/xunit.xml node_modules/.bin/mocha --require pob-babel/register --recursive --reporter xunit-file -u tdd test
     - yarn run generate:docs
   post:
     - bash <(curl -s https://codecov.io/bash)
@@ -33,14 +32,6 @@ deployment:
     commands:
       - git config user.email "builds@circleci.com"
       - git config user.name "CircleCi"
-      - mv coverage coverage-tmp
-      - mv docs docs-tmp
-      - git fetch
-      - git checkout -f gh-pages
-      - rm -Rf docs coverage
-      - mv docs-tmp docs
-      - mv coverage-tmp coverage
-      - date > date.txt
       - git add -f docs coverage
-      - git commit -m"auto commit from circleci"
-      - git push -f origin gh-pages
+      - 'git commit -m "docs: update generated docs [skip ci]"'
+      - git push
