--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -9,55 +9,93 @@
   "license": "ISC",
   "repository": "git@github.com:nightingalejs/nightingale-logger.git",
   "homepage": "https://github.com/nightingalejs/nightingale-logger",
-  "engines": {},
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "main": "./lib/index.js",
-  "module": "./lib-module/index.js",
-  "module-dev": "./lib-module-dev/index.js",
-  "browser": "./browser/lib/index.js",
-  "module:node": "./lib-module-node7/index.js",
-  "module:node-dev": "./lib-module-node7-dev/index.js",
-  "module:modern-browsers": "./lib-module-modern-browsers/index.js",
-  "module:modern-browsers-dev": "./lib-module-modern-browsers-dev/index.js",
+  "module": "./dist/index-browser.es.js",
+  "module-dev": "./dist/index-browser-dev.es.js",
+  "browser": "./dist/index.cjs.js",
+  "browser-dev": "./dist/index-dev.cjs.js",
+  "module:node": "./dist/index-node8.es.js",
+  "module:node-dev": "./dist/index-node8-dev.es.js",
+  "module:browser": "./dist/index-browser.es.js",
+  "module:browser-dev": "./dist/index-browser-dev.es.js",
+  "module:modern-browsers": "./dist/index-browsermodern.es.js",
+  "module:modern-browsers-dev": "./dist/index-browsermodern-dev.es.js",
   "scripts": {
     "build": "pob-build",
-    "clean": "rm -Rf docs dist test/node6 coverage",
-    "generate:api": "rm -Rf docs/ ; mkdir docs/ ; pob-build doc ; jsdoc README.md lib-doc --recurse --destination docs/ --configure jsdoc.conf.json ; rm -Rf lib-doc",
-    "generate:docs": "npm run generate:api && npm run generate:test-coverage",
-    "generate:test-coverage": "rm -Rf coverage/ ; NODE_ENV=production POBREGISTER_ONLY=./test node node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --require pob-babel/register --recursive --bail -u tdd test",
-    "lint": "eslint --ext .js,.jsx src/ test/",
-    "prepare": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
-    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
+    "clean": "rm -Rf docs dist",
+    "generate:api": "pob-build-doc",
+    "generate:docs": "yarn run generate:api && yarn run generate:test-coverage",
+    "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
+    "lint": "eslint src/",
+    "postcheckout": "./.git-hooks/post-checkout",
+    "postmerge": "./.git-hooks/post-merge",
+    "precommit": "./.git-hooks/pre-commit",
+    "preparecommitmsg": "./.git-hooks/prepare-commit-msg ${GIT_PARAMS}",
     "preversion": "yarn run lint && yarn run build && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
-    "test": "POBREGISTER_ONLY=./test mocha --require pob-babel/register --recursive --bail -u tdd test",
+    "test": "jest",
     "version": "pob-version",
     "watch": "pob-watch"
   },
+  "lint-staged": {
+    "package.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "src/**/*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "src/**/*.js": [
+      "eslint --fix --quiet",
+      "git add"
+    ]
+  },
+  "jest": {
+    "cacheDirectory": "./node_modules/.cache/jest",
+    "testMatch": [
+      "**/src/**/?(*.)test.js",
+      "**/src/__tests__/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ]
+  },
   "dependencies": {
-    "flow-runtime": "^0.10.0",
+    "flow-runtime": "^0.17.0",
     "nightingale-levels": "^1.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.0",
-    "babel-plugin-add-jsdoc-annotations": "^5.1.0",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-jsdoc": "^0.4.0",
-    "babel-preset-latest-node": "^0.2.2",
-    "babel-preset-modern-browsers": "^9.0.2",
-    "eslint": "^3.18.0",
-    "eslint-config-airbnb-base": "^11.1.2",
-    "eslint-config-pob": "^11.1.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-flowtype": "^2.30.4",
-    "eslint-plugin-import": "^2.2.0",
-    "istanbul": "^0.4.5",
-    "jsdoc": "^3.4.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^22.2.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-latest-node": "^1.0.0",
+    "babel-preset-modern-browsers": "^10.0.1",
+    "eslint": "4.13.0",
+    "eslint-config-airbnb-base": "^12.0.1",
+    "eslint-config-pob": "^17.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "husky": "^0.14.3",
+    "jest": "^22.3.0",
+    "jest-junit-reporter": "^1.1.0",
+    "jsdoc": "^3.5.5",
     "komet": "^0.1.4",
     "komet-karma": "^0.2.5",
-    "minami": "^1.1.1",
-    "mocha": "^3.2.0",
-    "pob-babel": "^17.1.1",
+    "lint-staged": "^6.1.0",
+    "minami": "^1.2.3",
+    "pob-babel": "^19.0.1",
     "pob-release": "^3.1.0",
+    "prettier": "^1.8.2",
+    "rollup": "^0.56.1",
     "xunit-file": "^1.0.0"
   }
 }
