--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -26,22 +26,24 @@
   "scripts": {
     "build": "pob-build",
     "clean": "rm -Rf docs dist",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "flow": "flow",
     "generate:api": "pob-build-doc",
-    "generate:docs": "yarn run generate:api && yarn run generate:test-coverage",
-    "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
+    "generate:docs": "rm -Rf docs ; yarn run generate:api && yarn run generate:test-coverage",
+    "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
     "lint": "eslint src/",
-    "postcheckout": "./.git-hooks/post-checkout",
-    "postmerge": "./.git-hooks/post-merge",
-    "precommit": "./.git-hooks/pre-commit",
-    "preparecommitmsg": "./.git-hooks/prepare-commit-msg ${GIT_PARAMS}",
-    "preversion": "yarn run lint && yarn run build && pob-repository-check-clean",
+    "postcheckout": "yarnhook",
+    "postmerge": "yarnhook",
+    "postrewrite": "yarnhook",
+    "precommit": "lint-staged",
+    "preversion": "yarn run lint && yarn run build && yarn run generate:docs && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
     "test": "jest",
     "version": "pob-version",
     "watch": "pob-watch"
   },
   "lint-staged": {
-    "package.json": [
+    "{README.md,package.json,.eslintrc.json}": [
       "prettier --write",
       "git add"
     ],
@@ -54,11 +56,21 @@
       "git add"
     ]
   },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true,
+    "printWidth": 100
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "jest": {
     "cacheDirectory": "./node_modules/.cache/jest",
     "testMatch": [
-      "**/src/**/?(*.)test.js",
-      "**/src/__tests__/**/*.test.js"
+      "<rootDir>/src/**/__tests__/**/*.js",
+      "<rootDir>/src/**/*.test.js"
     ],
     "collectCoverageFrom": [
       "src/**/*.js"
@@ -69,33 +81,32 @@
     "nightingale-levels": "^1.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^6.1.3",
+    "@commitlint/config-conventional": "^6.1.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^22.2.2",
+    "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-latest-node": "^1.0.0",
     "babel-preset-modern-browsers": "^10.0.1",
-    "eslint": "4.13.0",
-    "eslint-config-airbnb-base": "^12.0.1",
-    "eslint-config-pob": "^17.1.0",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint": "^4.18.2",
+    "eslint-config-pob": "^18.0.0",
     "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-prefer-class-properties": "^1.0.0",
     "eslint-plugin-prettier": "^2.6.0",
     "husky": "^0.14.3",
-    "jest": "^22.3.0",
+    "jest": "^22.4.2",
     "jest-junit-reporter": "^1.1.0",
     "jsdoc": "^3.5.5",
-    "komet": "^0.1.4",
-    "komet-karma": "^0.2.5",
-    "lint-staged": "^6.1.0",
+    "lint-staged": "^7.0.0",
     "minami": "^1.2.3",
-    "pob-babel": "^19.0.1",
+    "pob-babel": "^19.1.6",
     "pob-release": "^3.1.0",
-    "prettier": "^1.8.2",
-    "rollup": "^0.56.1",
-    "xunit-file": "^1.0.0"
+    "prettier": "^1.11.1",
+    "xunit-file": "^1.0.0",
+    "yarnhook": "^0.1.1"
   }
 }
