--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -2,16 +2,12 @@
   "name": "nightingale-logger",
   "version": "3.4.0",
   "description": "Logger for browser and node",
-  "keywords": [
-    "nightingale"
-  ],
+  "keywords": ["nightingale"],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
-  "repository": "git@github.com:nightingalejs/nightingale-logger.git",
-  "homepage": "https://github.com/nightingalejs/nightingale-logger",
-  "engines": {
-    "node": ">=4.0.0"
-  },
+  "repository": "git@github.com:christophehurpeau/nightingale.git",
+  "homepage": "https://github.com/christophehurpeau/nightingale",
+  "engines": { "node": ">=4.0.0" },
   "main": "./lib/index.js",
   "module": "./dist/index-browser.es.js",
   "module-dev": "./dist/index-browser-dev.es.js",
@@ -30,56 +26,33 @@
     "flow": "flow",
     "generate:api": "pob-build-doc",
     "generate:docs": "rm -Rf docs ; yarn run generate:api && yarn run generate:test-coverage",
-    "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
+    "generate:test-coverage":
+      "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
     "lint": "eslint src/",
     "postcheckout": "yarnhook",
     "postmerge": "yarnhook",
     "postrewrite": "yarnhook",
     "precommit": "lint-staged",
-    "preversion": "yarn run lint && yarn run build && yarn run generate:docs && pob-repository-check-clean",
-    "release": "pob-repository-check-clean && pob-release",
     "test": "jest",
-    "version": "pob-version",
     "watch": "pob-watch"
   },
   "lint-staged": {
-    "{README.md,package.json,.eslintrc.json}": [
-      "prettier --write",
-      "git add"
-    ],
-    "src/**/*.json": [
-      "prettier --write",
-      "git add"
-    ],
-    "src/**/*.js": [
-      "eslint --fix --quiet",
-      "git add"
-    ]
+    "{README.md,package.json,.eslintrc.json}": ["prettier --write", "git add"],
+    "src/**/*.json": ["prettier --write", "git add"],
+    "src/**/*.js": ["eslint --fix --quiet", "git add"]
   },
   "prettier": {
     "trailingComma": "all",
     "singleQuote": true,
     "printWidth": 100
   },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
+  "commitlint": { "extends": ["@commitlint/config-conventional"] },
   "jest": {
     "cacheDirectory": "./node_modules/.cache/jest",
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.js",
-      "<rootDir>/src/**/*.test.js"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.js"
-    ]
+    "testMatch": ["<rootDir>/src/**/__tests__/**/*.js", "<rootDir>/src/**/*.test.js"],
+    "collectCoverageFrom": ["src/**/*.js"]
   },
-  "dependencies": {
-    "flow-runtime": "^0.17.0",
-    "nightingale-levels": "^1.1.0"
-  },
+  "dependencies": { "flow-runtime": "^0.17.0", "nightingale-levels": "^1.1.0" },
   "devDependencies": {
     "@commitlint/cli": "^6.1.3",
     "@commitlint/config-conventional": "^6.1.3",
@@ -99,12 +72,10 @@
     "eslint-plugin-prettier": "^2.6.0",
     "husky": "^0.14.3",
     "jest": "^22.4.2",
-    "jest-junit-reporter": "^1.1.0",
     "jsdoc": "^3.5.5",
     "lint-staged": "^7.0.0",
     "minami": "^1.2.3",
-    "pob-babel": "^19.1.6",
-    "pob-release": "^3.1.0",
+    "pob-babel": "^20.0.0",
     "prettier": "^1.11.1",
     "xunit-file": "^1.0.0",
     "yarnhook": "^0.1.1"
