--- a/packages/nightingale-console-output/package.json
+++ b/packages/nightingale-console-output/package.json
@@ -1,13 +1,18 @@
 {
   "name": "nightingale-console-output",
-  "version": "1.5.0",
+  "version": "2.0.0",
   "description": "Nightingale console output",
-  "keywords": ["nightingale", "nightingale-output"],
+  "keywords": [
+    "nightingale",
+    "nightingale-output"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "engines": { "node": ">=4.0.0" },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "main": "./index.js",
   "module": "./dist/index-browser.es.js",
   "module-dev": "./dist/index-browser-dev.es.js",
@@ -26,8 +31,14 @@
     "test": "No tests",
     "watch": "pob-watch"
   },
-  "prettier": { "trailingComma": "all", "singleQuote": true, "printWidth": 100 },
-  "dependencies": { "nightingale-levels": "^1.0.0" },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true,
+    "printWidth": 100
+  },
+  "dependencies": {
+    "nightingale-levels": "^2.0.0"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
