--- a/packages/nightingale-levels/package.json
+++ b/packages/nightingale-levels/package.json
@@ -1,16 +1,27 @@
 {
   "name": "nightingale-levels",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Nightingale levels",
-  "keywords": ["logger"],
+  "keywords": [
+    "logger"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "engines": { "node": ">=4.0.0" },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "main": "./lib/index.js",
-  "scripts": { "lint": "eslint lib/", "test": "No tests" },
-  "prettier": { "trailingComma": "es5", "singleQuote": true, "printWidth": 100 },
+  "scripts": {
+    "lint": "eslint lib/",
+    "test": "No tests"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "singleQuote": true,
+    "printWidth": 100
+  },
   "devDependencies": {
     "eslint": "^4.18.2",
     "eslint-config-pob": "^18.0.0",
