--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -1,13 +1,17 @@
 {
   "name": "nightingale",
-  "version": "6.2.1",
+  "version": "7.0.0",
   "description": "Logger for browser and node",
-  "keywords": ["logger"],
+  "keywords": [
+    "logger"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "engines": { "node": ">=4.0.0" },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "main": "index.js",
   "module": "./dist/index-browser.es.js",
   "module-dev": "./dist/index-browser-dev.es.js",
@@ -25,22 +29,30 @@
     "flow": "flow",
     "generate:api": "pob-build-doc",
     "generate:docs": "rm -Rf docs ; yarn run generate:api && yarn run generate:test-coverage",
-    "generate:test-coverage":
-      "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
+    "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
     "lint": "eslint src/",
     "test": "jest",
     "watch": "pob-watch"
   },
-  "prettier": { "trailingComma": "all", "singleQuote": true, "printWidth": 100 },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true,
+    "printWidth": 100
+  },
   "jest": {
     "cacheDirectory": "./node_modules/.cache/jest",
-    "testMatch": ["<rootDir>/src/**/__tests__/**/*.js", "<rootDir>/src/**/*.test.js"],
-    "collectCoverageFrom": ["src/**/*.js"]
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.js",
+      "<rootDir>/src/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ]
   },
   "dependencies": {
     "flow-runtime": "^0.17.0",
-    "nightingale-levels": "^1.1.0",
-    "nightingale-logger": "^3.4.0"
+    "nightingale-levels": "^2.0.0",
+    "nightingale-logger": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -65,7 +77,7 @@
     "karma-mocha": "^1.2.0",
     "karma-proclaim": "^1.0.0",
     "minami": "^1.2.3",
-    "nightingale-string": "^2.3.0",
+    "nightingale-string": "^3.0.0",
     "pob-babel": "^20.0.0",
     "prettier": "^1.11.1",
     "xunit-file": "^1.0.0"
