--- a/packages/nightingale-console/package.json
+++ b/packages/nightingale-console/package.json
@@ -1,13 +1,18 @@
 {
   "name": "nightingale-console",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Console handler for nightingale",
-  "keywords": ["nightingale", "nightingale-handler"],
+  "keywords": [
+    "nightingale",
+    "nightingale-handler"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "engines": { "node": ">=6.5.0" },
+  "engines": {
+    "node": ">=6.5.0"
+  },
   "main": "./index.js",
   "typings": "./dist/index.d.ts",
   "module:node": "./dist/index-node8.es.js",
@@ -19,12 +24,16 @@
     "test": "echo \"No tests\"",
     "watch": "pob-watch"
   },
-  "prettier": { "trailingComma": "all", "singleQuote": true, "printWidth": 100 },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true,
+    "printWidth": 100
+  },
   "dependencies": {
-    "nightingale-ansi-formatter": "^2.0.0",
-    "nightingale-console-output": "^2.0.0",
-    "nightingale-debug": "^3.0.0",
-    "nightingale-types": "^0.0.0"
+    "nightingale-ansi-formatter": "^3.0.0",
+    "nightingale-console-output": "^3.0.0",
+    "nightingale-debug": "^4.0.0",
+    "nightingale-types": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
