--- a/packages/nightingale-levels/package.json
+++ b/packages/nightingale-levels/package.json
@@ -1,13 +1,17 @@
 {
   "name": "nightingale-levels",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Nightingale levels",
-  "keywords": ["logger"],
+  "keywords": [
+    "logger"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "engines": { "node": ">=6.5.0" },
+  "engines": {
+    "node": ">=6.5.0"
+  },
   "main": "./index.js",
   "typings": "./dist/index.d.ts",
   "module": "./dist/index-browser.es.js",
@@ -26,7 +30,11 @@
     "test": "echo \"No tests\"",
     "watch": "pob-watch"
   },
-  "prettier": { "trailingComma": "all", "singleQuote": true, "printWidth": 100 },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true,
+    "printWidth": 100
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
