--- a/packages/nightingale-slack/package.json
+++ b/packages/nightingale-slack/package.json
@@ -1,41 +1,63 @@
 {
   "name": "nightingale-slack",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Slack handler for nightingale",
-  "keywords": ["nightingale", "nightingale-handler"],
+  "keywords": [
+    "nightingale",
+    "nightingale-handler"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "engines": { "node": ">=6.5.0" },
+  "engines": {
+    "node": ">=6.5.0"
+  },
   "main": "./index.js",
   "typings": "./dist/index.d.ts",
   "module:node": "./dist/index-node8.es.js",
   "module:node-dev": "./dist/index-node8-dev.es.js",
-  "module:aliases-node": { "./createBody.js": "./dist/createBody-node8.es.js" },
-  "module:aliases-node-dev": { "./createBody.js": "./dist/createBody-node8-dev.es.js" },
+  "module:aliases-node": {
+    "./createBody.js": "./dist/createBody-node8.es.js"
+  },
+  "module:aliases-node-dev": {
+    "./createBody.js": "./dist/createBody-node8-dev.es.js"
+  },
   "scripts": {
     "build": "pob-build && tsc -p tsconfig.build.json --emitDeclarationOnly",
     "clean": "rm -Rf docs dist test/node6 coverage",
-    "generate:test-coverage":
-      "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
+    "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
     "lint": "tsc --noEmit && eslint --ext .ts  src/",
     "test": "jest",
     "watch": "pob-watch"
   },
-  "prettier": { "trailingComma": "all", "singleQuote": true, "printWidth": 100 },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true,
+    "printWidth": 100
+  },
   "jest": {
     "cacheDirectory": "./node_modules/.cache/jest",
-    "testMatch": ["<rootDir>/src/**/__tests__/**/*.ts", "<rootDir>/src/**/*.test.ts"],
-    "collectCoverageFrom": ["src/**/*.ts"],
-    "moduleFileExtensions": ["ts", "js"],
-    "transform": { "^.+\\.ts$": "babel-jest" }
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.ts",
+      "<rootDir>/src/**/*.test.ts"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.ts$": "babel-jest"
+    }
   },
   "dependencies": {
-    "nightingale-levels": "^2.0.0",
-    "nightingale-markdown-formatter": "^1.0.0",
-    "nightingale-raw-formatter": "^2.0.0",
-    "nightingale-types": "^0.0.0",
+    "nightingale-levels": "^3.0.0",
+    "nightingale-markdown-formatter": "^2.0.0",
+    "nightingale-raw-formatter": "^3.0.0",
+    "nightingale-types": "^1.0.0",
     "request": "^2.85.0"
   },
   "devDependencies": {
