--- a/packages/nightingale-string/package.json
+++ b/packages/nightingale-string/package.json
@@ -1,13 +1,18 @@
 {
   "name": "nightingale-string",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "String handler for nightingale",
-  "keywords": ["nightingale", "nightingale-handler"],
+  "keywords": [
+    "nightingale",
+    "nightingale-handler"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "engines": { "node": ">=6.5.0" },
+  "engines": {
+    "node": ">=6.5.0"
+  },
   "main": "./index.js",
   "typings": "./dist/index.d.ts",
   "module:node": "./dist/index-node8.es.js",
@@ -19,8 +24,15 @@
     "test": "echo \"No tests\"",
     "watch": "pob-watch"
   },
-  "prettier": { "trailingComma": "all", "singleQuote": true, "printWidth": 100 },
-  "dependencies": { "nightingale-raw-formatter": "^2.0.0", "nightingale-types": "^0.0.0" },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true,
+    "printWidth": 100
+  },
+  "dependencies": {
+    "nightingale-raw-formatter": "^3.0.0",
+    "nightingale-types": "^1.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
     "babel-core": "7.0.0-bridge.0",
