--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -8,7 +8,7 @@
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
   "engines": { "node": ">=6.5.0" },
-  "main": "index.js",
+  "main": "./index.js",
   "typings": "./dist/index.d.ts",
   "module": "./dist/index-browser.es.js",
   "module-dev": "./dist/index-browser-dev.es.js",
